finalised subjectsettings.html
