# data_endpoints/views.py
@@ -752,3 +752,34 @@ def put_user_preferences(request):
     if not request.method == 'PUT':
         return JsonResponse({'message': 'Invalid request.'}, status = 400)
     return JsonResponse({'message': 'Invalid request.'}, status = 500)
+
+def get_assessment_preferences(request):
+    '''
+    GET /api/data/preferences/{assignment_id}
+    No parameters
+    '''
+    if not request.GET:
+        result = {
+            "extension_length": 4
+        }
+        return JsonResponse(result)
+    if request.GET:
+        return JsonResponse({'message': 'Invalid request.'}, status = 500)
+
+def put_assessment_preferences(request):
+    '''
+    PUT /api/data/assessments/setpreferences
+    Request body
+    {
+        "coursepreference_id": 0,
+        "assignment_id": 0,
+        "extension_length": 0
+    }
+    '''
+    if request.method == 'PUT':
+        data = json.loads(request.body)
+        # SET AssignmentExtensionLength 
+        return JsonResponse({'message': 'Has been set successfully'}, status = 201)
+    
+    if not request.method == 'PUT':
+        return JsonResponse({'message': 'Invalid request.'}, status = 500)
